unpackaged/main/default/objects/Talent_Placement__c/Talent_Placement__c.object-meta.xml
<CustomObject>
    <label>Talent Placement</label>
    <nameField>
        <displayFormat>TP-{0000000000}</displayFormat>
        <label>Talent Placement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talent Placement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>