unpackaged/main/default/objects/Talent_Placement__c/fields/Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Talent Placement</relationshipLabel>
    <relationshipName>Talent_Placement</relationshipName>
    <type>Lookup</type>
</CustomField>