unpackaged/main/default/objects/Talent_Placement__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Talent Placement</relationshipLabel>
    <relationshipName>Talent_Placement</relationshipName>
    <type>Lookup</type>
</CustomField>